# action-ledger

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: ROADMAP.md  SELF_IMPROVEMENT_TARGET.md  SELF_IMPROVING_SETUP.md  USAGE.md
evals/: docs_qa.jsonl
src/action_ledger/: __init__.py  cli.py  models.py  parser.py
tests/: test_cli.py  test_parser.py
