[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "action-ledger"
version = "0.1.0"
description = "Scan Markdown files for tasks, TODOs, FIXMEs, and decisions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "okorion" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
action-ledger = "action_ledger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
