[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "action-ledger"
version = "0.1.0"
description = "Markdown 파일의 작업, TODO, FIXME, DECISION 항목을 스캔합니다."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "okorion" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
action-ledger = "action_ledger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
